samples/_failures_safe/1761245332_336415_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_10bc1913.c: In function ‘main’:
./samples/SAFE/__tmp_10bc1913.c:148:5: error: expected declaration or statement at end of input
  148 |     }
      |     ^
